--- a/src/styles/mixins.css
+++ b/src/styles/mixins.css
@@ -1,3 +1,12 @@
+@define-mixin article-block {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.7rem;
+  border-radius: 1rem;
+  box-shadow: var(--shadow-z-depth-1);
+}
+
 @define-mixin nav-animation {
   &.animation-enter {
     opacity: 0;
