--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -3,7 +3,14 @@
   flex-direction: column;
   min-height: 100vh;
 
+  & .header {
+    position: fixed;
+    left: 0;
+    right: 0;
+  }
+
   & .main {
+    margin-top: var(--header-height);
     flex-grow: 1;
   }
 }
