--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,8 +7,6 @@
   background-color: var(--dark-primary-color);
   color: var(--text-and-icons-color);
   box-shadow: var(--shadow-z-depth-1);
-  --height-lg: 4rem;
-  --height-greaterThan-lg: 6rem;
 
   & .link {
     display: flex;
@@ -19,7 +17,7 @@
   }
 
   &.lessThan-lg {
-    height: var(--height-lg);
+    height: var(--header-height-lg);
     padding: 0 1rem;
 
     & .title {
@@ -35,8 +33,8 @@
       flex-direction: column;
       justify-content: flex-start;
       width: 70%;
-      height: calc(100% - var(--height-lg));
-      padding-top: var(--height-lg);
+      height: calc(100% - var(--header-height-lg));
+      padding-top: var(--header-height-lg);
       background-color: var(--dark-primary-color);
 
       &:before {
@@ -57,12 +55,20 @@
         font-size: 2rem;
         color: white;
 
+        &.active,
         &:hover {
           cursor: pointer;
-          background: var(--accent-color);
           color: black;
           box-shadow: var(--shadow-z-depth-1);
           transform: translateX(-0.8rem);
+        }
+
+        &.active {
+          background: var(--accent-color);
+        }
+
+        &:hover {
+          background: var(--primary-color);
         }
       }
 
@@ -75,6 +81,10 @@
       border: none;
       z-index: 2;
 
+      &:hover {
+        cursor: pointer;
+      }
+
       & .icon {
         width: 3rem;
       }
@@ -82,7 +92,7 @@
   }
 
   &.greaterThanOrEqual-lg {
-    height: var(--height-greaterThan-lg);
+    height: var(--header-height-greaterThan-lg);
     padding: 0 4rem;
 
     & .title {
