--- a/src/styles/pages/historyPage.css
+++ b/src/styles/pages/historyPage.css
@@ -1,2 +1,128 @@
-.main {
+@import '../mixins.css';
+
+.main-history {
+  & .title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  & .image {
+    object-fit: cover;
+    @mixin article-block;
+  }
+
+  & .text-block {
+    @mixin article-block;
+  }
+
+  & .text-block-1,
+  & .text-block-3 {
+    background: var(--light-primary-color);
+    color: rgb(77, 77, 77);
+  }
+
+  & .text-block-2 {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
+    background: var(--primary-color);
+    color: white;
+
+    & .section-2 {
+      grid-column: 1 / 3;
+    }
+
+    & .icon {
+      margin: 0 auto;
+    }
+  }
+
+  & .image {
+    width: 100%;
+  }
+
+  &.lessThan-md {
+    display: flex;
+    flex-direction: column;
+
+    & .title {
+      font-size: 3rem;
+      display: flex;
+      justify-content: center;
+    }
+
+    & .image {
+      margin-bottom: 5rem;
+      height: 30rem;
+    }
+
+    & .text-block {
+      padding: 1rem;
+      margin-bottom: 5rem;
+      border-radius: 0;
+    }
+  }
+
+  &.greaterThanOrEqual-lg {
+    padding: 7rem 15rem;
+  }
+
+  &.at-md {
+    padding: 7rem 0;
+  }
+
+  &.at-md,
+  &.greaterThanOrEqual-lg {
+    display: grid;
+    margin: 2rem;
+    grid-column-gap: 4rem;
+    grid-row-gap: 7rem;
+    grid-template-areas:
+      'image-1 image-1 image-1 title title'
+      'image-1 image-1 image-1 text-block-1 text-block-1'
+      'image-1 image-1 image-1 text-block-1 text-block-1'
+      'text-block-2 text-block-2 text-block-2 text-block-2 text-block-2'
+      'text-block-2 text-block-2 text-block-2 text-block-2 text-block-2'
+      'text-block-2 text-block-2 text-block-2 text-block-2 text-block-2'
+      'text-block-3 text-block-3 image-2 image-2 image-2'
+      'text-block-3 text-block-3 image-2 image-2 image-2'
+      'text-block-3 text-block-3 image-2 image-2 image-2'
+      'text-block-3 text-block-3 image-2 image-2 image-2'
+      'text-block-3 text-block-3 image-2 image-2 image-2';
+
+    & .text-block {
+      padding: 5rem;
+    }
+
+    & .image {
+      height: 50rem;
+    }
+
+    & .title {
+      font-size: 3rem;
+      grid-area: title;
+    }
+
+    & .image-1 {
+      grid-area: image-1;
+    }
+
+    & .image-2 {
+      grid-area: image-2;
+    }
+
+    & .text-block-1 {
+      grid-area: text-block-1;
+    }
+
+    & .text-block-2 {
+      grid-area: text-block-2;
+    }
+
+    & .text-block-3 {
+      grid-area: text-block-3;
+    }
+  }
 }
