feature: add about page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,7 @@ body {
   --light-primary-color: #ffe9df;
   --primary-color: #fb9795;
   --text-and-icons-color: #ffffff;
+  --text-and-icons-color-2: rgb(77, 77, 77);
   --accent-color: #b0e7ea;
   --primary-text-color: #212121;
   --secondary-text-color: #757575;
