--- a/src/styles/pages/policyPage.css
+++ b/src/styles/pages/policyPage.css
@@ -1,4 +1,4 @@
-.main-culture {
+.main-policy {
   background-color: var(--light-primary-color);
   color: var(--text-and-icons-color-2);
   display: flex;
@@ -40,10 +40,10 @@
     display: grid;
     grid-gap: 2rem;
     grid-template-areas:
-      'section-1 section-1 section-1 image-1 image-1'
-      'image-2 image-2 image-2 section-2 section-2'
-      'section-3 section-3 section-3 section-2 section-2'
-      'section-3 section-3 section-3 image-3 image-3';
+      'section-1 image-1'
+      'section-2 image-1'
+      'section-2 image-2'
+      'section-3 image-2';
     & .section {
       box-sizing: border-box;
       background-color: var(--primary-color);
@@ -65,10 +65,6 @@
 
     & .image-2 {
       grid-area: image-2;
-    }
-
-    & .image-3 {
-      grid-area: image-3;
     }
 
     & .section {
